--- a/src/Assignment-5/assignment5.css
+++ b/src/Assignment-5/assignment5.css
@@ -1,7 +1,70 @@
-/* Our CSS file. */
+* {
+  box-sizing: border-box;
+}
 
+.container{
+  display:flex;
+  flex-wrap:wrap;
+}
+.card {
+  flex-direction: column;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
 
-.container, .content {
-width: 100%;
-height: 100%;
+section{
+  display:felx;
+  background-color: yellowgreen;
+  flex-direction: row;
+  width:400px;
+}
+.card-content {
+  padding: 3em 4em 2em;
+}
+h3 {
+  font-family: 'PT Serif', serif;
+  font-weight: bold;
+  font-size: 2.5em;
+  margin: 0 0 1em;
+}
+
+a {
+  background: #8dc26f;
+  color: #fff;
+  padding: 0 25px;
+  height: 50px;
+  font-size: 0.8em;
+  letter-spacing: 1px;
+  line-height: 50px;
+  display: inline-block;
+  border-radius: 25px;
+  text-decoration: none;
+  margin-top: 1.5em;
+  text-transform: uppercase;
+  border: 1px solid rgba(0,0,0,0.1);
+}
+@media (max-width: 790px) {
+  body {
+    overflow-x: hidden;
+  }
+  .wrap {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  .card {
+    flex-direction: column;
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+  .card-pic-wrap {
+    width: 100%;
+  }
+    img {
+      bottom: 20px;
+      position: relative;
+    }
+  
+  .card-content {
+    padding: 2em 2em 1em;
+  } 
 }
