--- a/src/Assignment-5/assignment5.css
+++ b/src/Assignment-5/assignment5.css
@@ -1,70 +1,59 @@
-* {
+/* Our CSS file. */
+
+
+.container, .content {
+  width: 100%;
+  height: 100%;
   box-sizing: border-box;
-}
-
-.container{
-  display:flex;
-  flex-wrap:wrap;
-}
-.card {
-  flex-direction: column;
-  margin-top: 50px;
-  margin-bottom: 50px;
-}
-
-section{
-  display:felx;
-  background-color: yellowgreen;
-  flex-direction: row;
-  width:400px;
-}
-.card-content {
-  padding: 3em 4em 2em;
-}
-h3 {
-  font-family: 'PT Serif', serif;
-  font-weight: bold;
-  font-size: 2.5em;
-  margin: 0 0 1em;
-}
-
-a {
-  background: #8dc26f;
-  color: #fff;
-  padding: 0 25px;
-  height: 50px;
-  font-size: 0.8em;
-  letter-spacing: 1px;
-  line-height: 50px;
-  display: inline-block;
-  border-radius: 25px;
-  text-decoration: none;
-  margin-top: 1.5em;
-  text-transform: uppercase;
-  border: 1px solid rgba(0,0,0,0.1);
-}
-@media (max-width: 790px) {
-  body {
-    overflow-x: hidden;
   }
-  .wrap {
-    margin-left: 20px;
-    margin-right: 20px;
+  #container div:nth-child(2){
+      margin-top: 80px;
   }
-  .card {
-    flex-direction: column;
-    margin-top: 50px;
-    margin-bottom: 50px;
+  body{
+      background-color:rgba(128, 128, 128, 0.39);
+      margin:60px 20px 20px 10px;
   }
-  .card-pic-wrap {
-    width: 100%;
+  .card{
+      display: flex;
+      height: 600px;
   }
-    img {
-      bottom: 20px;
-      position: relative;
-    }
+  .card section:nth-child(1){
+      background-color: rgba(85, 231, 66, 0.596);
+      max-width :45%;
+      padding-top: 50px;
+      position:relative;
+  }
   
-  .card-content {
-    padding: 2em 2em 1em;
-  } 
-}
+  .card section:nth-child(2){
+      background-color: white;
+      width :55%;
+      text-align:left;
+      padding:80px 80px;
+  }
+  #container div:nth-child(1) section:nth-child(1) img{
+      text-align: right;
+      transform:scale(1.3);
+  }
+  .card section:nth-child(2) h1{
+      font-size: 300%;
+  
+  }
+  
+  .card section:nth-child(2) p{
+      font-size: 130%;
+  }
+  
+  .card section:nth-child(2) a{
+  
+      text-decoration: none;
+      font-size: 140%;
+      border: 1px solid rgba(85, 231, 66, 0.596);
+      background-color:rgba(85, 231, 66, 0.596) ;
+      color: white;
+      border-radius: 40px;
+  }
+  
+  .image-2{
+      width: 430px;
+      transform: scaleX(1.2);
+  }
