--- a/src/Assignment-5/assignment5.css
+++ b/src/Assignment-5/assignment5.css
@@ -4,4 +4,57 @@
 .container, .content {
 width: 100%;
 height: 100%;
+box-sizing: border-box;
 }
+#container div:nth-child(2){
+    margin-top: 80px;
+}
+body{
+    background-color:rgba(128, 128, 128, 0.39);
+    margin:60px 20px 20px 10px;
+}
+.card{
+    display: flex;
+    height: 600px;
+}
+.card section:nth-child(1){
+    background-color: rgba(85, 231, 66, 0.596);
+    max-width :45%;
+    padding-top: 50px;
+    position:relative;
+}
+
+.card section:nth-child(2){
+    background-color: white;
+    width :55%;
+    text-align:left;
+    padding:80px 80px;
+}
+#container div:nth-child(1) section:nth-child(1) img{
+    text-align: right;
+    transform:scale(1.3);
+}
+.card section:nth-child(2) h1{
+    font-size: 300%;
+
+}
+
+.card section:nth-child(2) p{
+    font-size: 130%;
+}
+
+.card section:nth-child(2) a{
+
+    text-decoration: none;
+    font-size: 140%;
+    border: 1px solid rgba(85, 231, 66, 0.596);
+    background-color:rgba(85, 231, 66, 0.596) ;
+    color: white;
+    border-radius: 40px;
+}
+
+.image-2{
+    width: 430px;
+    transform: scaleX(1.2);
+}
+
