--- a/src/Assignment-3/assignment3.css
+++ b/src/Assignment-3/assignment3.css
@@ -1,7 +1,64 @@
 /* Our CSS file. */
-
-
-.container, .content {
-width: 100%;
-height: 100%;
+.container,.content{
+    height:100%;
+    width:100%;
 }
+
+.parent1{
+    width:100%;
+    height:350px;
+    background-color: #999;
+
+}
+.data1,.iframe1{
+    display:inline-block;
+    width:48%;
+}
+.iframe1{
+    margin-top:40px;
+
+}
+.data1{
+    
+    text-align:left;
+    vertical-align:top ;
+    margin-left:26px;
+    margin-top:70px;
+}
+.frame1 iframe{
+
+    width:100%;
+    height:250px;
+}
+.parent2{
+    margin-top:5px;
+    width:100%;
+    height:350px;
+    background-color: #999;
+}
+.frame2 iframe{
+    height:200px;
+    width:200px;
+}
+.frame2.data2{
+    margin:auto;
+    width:40px ;
+    padding:10px;
+}
+.data2 h1,.data2 p{
+    text-align:center;
+}
+.button{
+    color: white;
+    background-color: black;
+    padding:13px 15px;
+
+}
+.button1{
+    margin-left:300px;
+    color: white;
+    background-color: black;
+    padding:13px 15px;
+
+}
+
